crates/ty_python_semantic/resources/mdtest/snapshots/1._invalid_argument_typ…_-_2._Invalid_argument_typ…_-_6._Many_parameters.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. invalid_argument_typ… - 2. Invalid argument typ… - 6. Many parameters
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(x: int, y: int, z: int) -> int:
2 |     return x * y * z
3 | 
4 | foo(1, "hello", 3)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:4:8
  |
2 |     return x * y * z
3 |
4 | foo(1, "hello", 3)  # error: [invalid-argument-type]
  |        ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(x: int, y: int, z: int) -> int:
  |     ^^^         ------ Parameter declared here
2 |     return x * y * z
  |
info: rule `invalid-argument-type` is enabled by default

```
