crates/ty_python_semantic/resources/mdtest/snapshots/1._invalid_argument_typ…_-_2._Invalid_argument_typ…_-_7._Many_parameters_acro….snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: 1. invalid_argument_typ… - 2. Invalid argument typ… - 7. Many parameters acro…
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/invalid_argument_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | def foo(
2 |     x: int,
3 |     y: int,
4 |     z: int,
5 | ) -> int:
6 |     return x * y * z
7 | 
8 | foo(1, "hello", 3)  # error: [invalid-argument-type]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:8:8
  |
6 |     return x * y * z
7 |
8 | foo(1, "hello", 3)  # error: [invalid-argument-type]
  |        ^^^^^^^ Expected `int`, found `Literal["hello"]`
  |
info: Function defined here
 --> src/mdtest_snippet.py:1:5
  |
1 | def foo(
  |     ^^^
2 |     x: int,
3 |     y: int,
  |     ------ Parameter declared here
4 |     z: int,
5 | ) -> int:
  |
info: rule `invalid-argument-type` is enabled by default

```
